# mini-vllm

./: .gitignore  LICENSE  Makefile  README.md  outline.md  pyproject.toml  script.md
.github/workflows/: ci.yml  pages.yml
benchmarks/: _style.py  bench_block_size.py  bench_cache_budget.py  bench_chunked_prefill.py  bench_latency.py  bench_memory.py  bench_preemption.py  bench_prefix.py  bench_throughput.py  bench_watermark.py  run_all.py
docs/: learning-path.md  real-vllm-runbook.md  results.json  trace.html  vllm-mapping.md
docs/labs/: 01-token-accounting.md  02-paged-kv.md  03-continuous-batching.md  04-preemption.md  05-prefix-cache.md  06-benchmarking.md  README.md
examples/: kv_sizing.py  openai_client.py  vllm_serve_commands.md
learning-site/: package.json  vite.config.ts
learning-site/src/: App.tsx
learning-site/src/chapters/01-inference-physics/: InferencePhysics.css  InferencePhysics.tsx  steps.ts
learning-site/src/chapters/02-engine-step/: EngineStep.css  EngineStep.tsx  steps.ts
learning-site/src/components/: DeepDiveChapter.css  DeepDiveChapter.tsx  ProgressBar.tsx
learning-site/src/hooks/: useStepper.ts
learning-site/src/registry/: chapters.ts  types.ts
learning-site/src/styles/: base.css
mini_vllm/: __init__.py  analysis.py  block_manager.py  config.py  demo.py  engine.py  memory_estimator.py  metrics.py  model_runner.py  request.py  scheduler.py  trace_viewer.py  workloads.py
tests/: test_analysis.py  test_benchmarks.py  test_block_manager.py  test_engine.py  test_memory_estimator.py  test_scheduler.py  test_trace_viewer.py
(+18 files in other folders)
